Moved support popup up by 1rem to stop overlapping with footer

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 
 .pinnedSupportPopup {
     position: fixed;
-    bottom: 2rem;
+    bottom: 3rem;
     right: 1rem;
     background: #7eb67c;
     padding: 1rem;
